--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Generated videos
+data/videos/*.mp4
+data/videos/*.webm
+data/videos/*.json
+data/images/*.png
